--- a/biology.html
+++ b/biology.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Topics</title>
+    <title>Mathematics Topics</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,14 +22,12 @@
         }
 
         .topic {
-            margin-bottom: 10px;
-            padding: 10px;
+            margin-bottom: 20px;
+            padding: 15px;
             background: #fff;
-            border: none;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s, box-shadow 0.3s;
-            font-size: 0.9em;
         }
 
         .topic:hover {
@@ -69,10 +67,10 @@
     </style>
 </head>
 <body>
-    <h1>Study Topics</h1>
+    <h1>Mathematics Topics</h1>
     <div id="topics-container">
         <!-- Topics will be dynamically added by JavaScript -->
     </div>
-    <script src="biology.js"></script>
+    <script src="mathematics.js"></script>
 </body>
 </html>
