--- a/bio/tophic1.html
+++ b/bio/tophic1.html
@@ -1,78 +1,65 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>जीव विज्ञान के महत्वपूर्ण विषय</title>
+    <title>IAS परीक्षा: जीव विज्ञान के मुख्य टॉपिक</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #eef2f3;
             margin: 0;
             padding: 20px;
+            color: #333;
+            line-height: 1.6;
         }
         h1 {
             text-align: center;
-            color: #333;
-            margin-bottom: 20px;
+            color: #2c3e50;
         }
-        .topic {
-            background-color: #fff;
-            padding: 15px;
+        h2 {
+            color: #34495e;
+            margin-top: 20px;
+        }
+        p {
             margin-bottom: 10px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .topic h2 {
-            color: #4CAF50;
-        }
-        .topic p {
-            color: #555;
-            font-size: 1rem;
         }
     </style>
 </head>
 <body>
-    <h1>जीव विज्ञान के महत्वपूर्ण विषय</h1>
-    <div class="topic">
-        <h2>1. कोशिका संरचना और कार्य</h2>
-        <p>कोशिका जीवन की आधारभूत इकाई है। यह दो प्रकार की होती है - प्रोकैरियोटिक और यूकैरियोटिक। कोशिका में मुख्यतः झिल्ली, नाभिक और साइटोप्लाज्म होते हैं।</p>
-    </div>
-    <div class="topic">
-        <h2>2. प्रकाश संश्लेषण</h2>
-        <p>यह वह प्रक्रिया है जिसके द्वारा पौधे सूर्य के प्रकाश, कार्बन डाइऑक्साइड और पानी की मदद से भोजन बनाते हैं। यह प्रक्रिया क्लोरोप्लास्ट में होती है।</p>
-    </div>
-    <div class="topic">
-        <h2>3. मानव पाचन तंत्र</h2>
-        <p>यह प्रणाली भोजन को तोड़कर ऊर्जा प्रदान करती है। इसमें मुख, ग्रसनी, अमाशय, छोटी आंत और बड़ी आंत मुख्य अंग हैं।</p>
-    </div>
-    <div class="topic">
-        <h2>4. आनुवंशिकी और विरासत</h2>
-        <p>आनुवंशिकी वह विज्ञान है जो गुणसूत्र और डीएनए के माध्यम से लक्षणों के स्थानांतरण का अध्ययन करता है। ग्रेगर मेंडल को आनुवंशिकी का जनक कहा जाता है।</p>
-    </div>
-    <div class="topic">
-        <h2>5. विकास और प्राकृतिक चयन</h2>
-        <p>चार्ल्स डार्विन ने विकास और प्राकृतिक चयन का सिद्धांत प्रस्तुत किया। इसके अनुसार, जीवों में समय के साथ पर्यावरण के अनुसार परिवर्तन होते हैं।</p>
-    </div>
-    <div class="topic">
-        <h2>6. मानव श्वसन तंत्र</h2>
-        <p>इस प्रणाली में नाक, श्वासनली, फेफड़े आदि शामिल होते हैं। इसका मुख्य कार्य ऑक्सीजन का आदान-प्रदान करना और कार्बन डाइऑक्साइड को बाहर निकालना है।</p>
-    </div>
-    <div class="topic">
-        <h2>7. पौधों का प्रजनन</h2>
-        <p>पौधे मुख्य रूप से लैंगिक और अलैंगिक दोनों तरीकों से प्रजनन करते हैं। लैंगिक प्रजनन में परागण और निषेचन शामिल हैं।</p>
-    </div>
-    <div class="topic">
-        <h2>8. रक्त परिसंचरण तंत्र</h2>
-        <p>यह प्रणाली हृदय, रक्त और रक्त वाहिकाओं के माध्यम से शरीर में ऑक्सीजन, पोषक तत्व और अपशिष्ट पदार्थों का परिवहन करती है।</p>
-    </div>
-    <div class="topic">
-        <h2>9. तंत्रिका तंत्र</h2>
-        <p>यह प्रणाली मस्तिष्क, मेरुरज्जु और नसों से मिलकर बनी होती है। यह शरीर के कार्यों और प्रतिक्रियाओं को नियंत्रित करती है।</p>
-    </div>
-    <div class="topic">
-        <h2>10. प्रतिरक्षा तंत्र</h2>
-        <p>यह प्रणाली शरीर को बीमारियों से बचाने का कार्य करती है। इसमें सफेद रक्त कोशिकाएं और एंटीबॉडी मुख्य भूमिका निभाते हैं।</p>
-    </div>
+    <h1>IAS परीक्षा: जीव विज्ञान के मुख्य टॉपिक</h1>
+
+    <h2>1. कोशिका विज्ञान (Cell Biology)</h2>
+    <p>
+        कोशिका विज्ञान में कोशिका की संरचना और कार्यों का अध्ययन किया जाता है। इसमें कोशिका झिल्ली, नाभिक, माइटोकॉन्ड्रिया और अन्य अंगकों की भूमिका शामिल है। 
+        डीएनए और आरएनए अनुवांशिक जानकारी को संग्रहित और स्थानांतरित करते हैं। यह विज्ञान समझाता है कि कैसे कोशिकाएं शरीर की विभिन्न प्रक्रियाओं में योगदान करती हैं। 
+        कोशिकीय विभाजन जैसे माइटोसिस और मियोसिस का भी अध्ययन किया जाता है।
+    </p>
+
+    <h2>2. मानव शरीर विज्ञान (Human Physiology)</h2>
+    <p>
+        यह मानव शरीर के कार्यों को समझने का विज्ञान है। पाचन तंत्र भोजन को तोड़कर ऊर्जा प्रदान करता है। श्वसन तंत्र ऑक्सीजन के आदान-प्रदान में मदद करता है। 
+        परिसंचरण तंत्र रक्त को पूरे शरीर में प्रवाहित करता है। स्नायुतंत्र संदेशों का संचार करता है और शरीर को नियंत्रण में रखता है।
+    </p>
+
+    <h2>3. आनुवंशिकी (Genetics)</h2>
+    <p>
+        आनुवंशिकी अनुवांशिक गुणों के अध्ययन का विज्ञान है। यह डीएनए, जीन, और गुणसूत्रों पर आधारित होता है। इसमें मेंडेल के नियमों और आनुवंशिक विकारों का अध्ययन होता है। 
+        आनुवंशिकी हमें यह समझने में मदद करता है कि माता-पिता के गुण संतानों में कैसे स्थानांतरित होते हैं। इस क्षेत्र का उपयोग चिकित्सा और कृषि में भी किया जाता है।
+    </p>
+
+    <h2>4. पारिस्थितिकी (Ecology)</h2>
+    <p>
+        पारिस्थितिकी में जीवों और उनके पर्यावरण के बीच के संबंधों का अध्ययन किया जाता है। इसमें पारिस्थितिक तंत्र, ऊर्जा प्रवाह, और खाद्य जाल शामिल हैं। 
+        यह अध्ययन करता है कि विभिन्न प्रजातियां अपने पर्यावरण में कैसे जीवित रहती हैं। पारिस्थितिकी संरक्षण और जैव विविधता बनाए रखने में मदद करता है। 
+        यह विषय जलवायु परिवर्तन और प्रदूषण से जुड़े मुद्दों पर भी ध्यान केंद्रित करता है।
+    </p>
+
+    <h2>5. विकास और जैव विकास (Evolution and Biology)</h2>
+    <p>
+        विकास और जैव विकास जीवन के क्रमिक परिवर्तन को समझाने का अध्ययन है। इसमें चार्ल्स डार्विन के सिद्धांत और प्राकृतिक चयन पर ध्यान दिया जाता है। 
+        यह बताता है कि कैसे समय के साथ प्रजातियां नई परिस्थितियों के अनुकूल होती हैं। जैव विकास विभिन्न प्रजातियों की उत्पत्ति और उनके बीच संबंधों को समझाता है। 
+        यह विषय जीवों के ऐतिहासिक और वर्तमान विकास पर आधारित है।
+    </p>
 </body>
 </html>
