--- a/biology.html
+++ b/biology.html
@@ -71,6 +71,6 @@
     <div id="topics-container">
         <!-- Topics will be dynamically added by JavaScript -->
     </div>
-    <script src="mathematics.js"></script>
+    <script src="biology.js"></script>
 </body>
 </html>
