--- a/biology.html
+++ b/biology.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>रसायन विज्ञान के प्रमुख टॉपिक्स</title>
+    <title>जीव विज्ञान के प्रमुख टॉपिक्स</title>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -32,7 +32,7 @@
     padding: 15px 30px; /* बटन की ऊंचाई और चौड़ाई बढ़ाने के लिए */
     margin: 20px;
     color: #fff;
-    background: linear-gradient(90deg, #ff8a00, #da1b60);
+    background: linear-gradient(90deg, #8432d1, #1a040c);
     border: none;
     border-radius: 40px; /* बटन को अधिक गोल करने के लिए */
     cursor: pointer;
@@ -107,7 +107,7 @@
     </style>
 </head>
 <body>
-    <h1>रसायन विज्ञान के प्रमुख टॉपिक्स</h1>
+    <h1>जीव विज्ञान के प्रमुख टॉपिक्स</h1>
     <div class="buttons">
         <button onclick="window.location.href='quiz.html'">क्विज़</button>
         <button onclick="window.location.href='question-answer.html'">प्रश्न और उत्तर</button>
